--- a/styles/global.css
+++ b/styles/global.css
@@ -9,15 +9,64 @@
   align-items: center;
   box-sizing: border-box;
   margin: 0px auto;
-  background-color: black;
   color: white;
   margin: -8px;
 }
-#moviePageContainer .movieContainer {
+#moviePageContainer #heroMovieContainer {
+  position: relative;
+  width: 100%;
+  height: 80vh;
+  align-items: center;
+  z-index: 1;
+}
+#moviePageContainer #heroMovieContainer #heroBackgroundImage {
+  position: absolute;
+  z-index: -1;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  opacity: 0.6;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+#moviePageContainer #heroMovieContainer #heroDetailContainer {
+  position: relative;
+  padding: 0px 2vw;
+  height: auto;
+  z-index: 1;
+}
+#moviePageContainer #heroMovieContainer #heroDetailContainer .heroDetailItem {
+  margin-bottom: 10px;
+  line-height: 30px;
+}
+#moviePageContainer #heroMovieContainer #heroDetailContainer #heroTitle,
+#moviePageContainer #heroMovieContainer #heroDetailContainer #detailReleaseYear {
+  font-weight: 700;
+  font-size: xx-large;
+}
+#moviePageContainer #heroMovieContainer #heroDetailContainer #heroDetailButton {
+  cursor: pointer;
+}
+#moviePageContainer #heroMovieContainer #gradientBox {
+  display: flex;
+  position: absolute;
+  align-self: bottom;
+  height: 80px;
+  width: 100%;
+  bottom: 0px;
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), black);
+}
+#moviePageContainer #generalMovieContainer {
+  padding: 10px;
+}
+#moviePageContainer #generalMovieContainer .movieContainer {
   display: flex;
   overflow-x: scroll;
 }
-#moviePageContainer .movieContainer .movieItem {
+#moviePageContainer #generalMovieContainer .movieContainer .movieItem {
   margin: 5px 5px;
   width: 15vw;
   height: 22.5vw;
@@ -180,7 +229,7 @@
   justify-content: space-between;
   padding: 0px 5vw;
   margin: 0px;
-  z-index: 0.99;
+  z-index: -1.1;
   color: white;
   height: 60px;
 }
@@ -191,6 +240,7 @@
   justify-content: center;
   width: auto;
   font-size: x-large;
+  z-index: 0.95;
 }
 #navbarContainer a {
   color: white;
