--- a/styles/global.scss
+++ b/styles/global.scss
@@ -17,20 +17,98 @@
 //Movies.js
 #moviePageContainer {
 	@include standardFormatting;
-	background-color: black;
+	// background-color: black;
 	color: white;
 	margin: -8px;
+	// padding: 10px 10px;
 
-	.movieContainer {
-		// background-color: black;
-		// color: white;
-		display: flex;
-		overflow-x: scroll;
+	#heroMovieContainer {
+		position: relative;
+		// border: solid red;
+		width: 100%;
+		height: 80vh;
+		// background-size: cover;
+		// background-repeat: no-repeat;
+		// display: flex;
+		align-items: center;
+		// position: absolute;
+		// overflow: hidden;
+		// overflow-x: hidden;
+		z-index: 1;
 
-		.movieItem {
-			margin: 5px 5px;
-			width: 15vw;
-			height: calc(1.5 * 15vw);
+		#heroBackgroundImage {
+			// border: solid blue;
+			position: absolute;
+			z-index: -1;
+			top: 0;
+			bottom: 0;
+			left: 0;
+			right: 0;
+			opacity: 0.6;
+			width: 100%;
+			height: 100%;
+			background-size: cover;
+			background-repeat: no-repeat;
+			// background-image: linear-gradient(
+			// 	to bottom,
+			// 	rgba(255, 0, 0, 0),
+			// 	rgba(0, 0, 0, 1)
+			// );
+		}
+
+		#heroDetailContainer {
+			position: relative;
+			padding: 0px 2vw;
+			// width: 100%;
+			height: auto;
+			z-index: 1;
+			// border: solid green;
+
+			.heroDetailItem {
+				margin-bottom: 10px;
+				line-height: 30px;
+			}
+			#heroTitle,
+			#detailReleaseYear {
+				font-weight: 700;
+				font-size: xx-large;
+			}
+			#heroDetailButton {
+				cursor: pointer;
+			}
+		}
+
+		#gradientBox {
+			display: flex;
+			position: absolute;
+			align-self: bottom;
+			// background-color: white;
+			// border: solid white;
+			height: 80px;
+			width: 100%;
+			bottom: 0px;
+			background-image: linear-gradient(
+				to bottom,
+				rgba(255, 255, 255, 0),
+				rgba(0, 0, 0, 1)
+			);
+		}
+	}
+
+	#generalMovieContainer {
+		padding: 10px;
+
+		.movieContainer {
+			// background-color: black;
+			// color: white;
+			display: flex;
+			overflow-x: scroll;
+
+			.movieItem {
+				margin: 5px 5px;
+				width: 15vw;
+				height: calc(1.5 * 15vw);
+			}
 		}
 	}
 }
@@ -256,7 +334,8 @@
 	// padding: 10px 5vw;
 	padding: 0px 5vw;
 	margin: 0px;
-	z-index: 0.99;
+	// z-index: 0.99;
+	z-index: -1.1;
 	color: white;
 	height: 60px;
 
@@ -269,6 +348,7 @@
 		// height: 200%;
 		width: auto;
 		font-size: x-large;
+		z-index: 0.95;
 	}
 
 	a {
@@ -289,4 +369,20 @@
 	#searchBar {
 		color: white;
 	}
+}
+
+@media only screen and (max-width: 480px) {
+	// .movieIcon {
+	// 	width: 33vw;
+	// }
+	// #homeButton,
+	// #searchBar {
+	// 	color: blue;
+	// }
+}
+
+@media screen and (min-width: 481px) and (max-width: 768px) {
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
 }
