--- a/styles/global.css
+++ b/styles/global.css
@@ -31,24 +31,30 @@
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
-#moviePageContainer #heroMovieContainer #heroDetailContainer {
+#moviePageContainer #heroMovieContainer #alignmentContainer {
+  display: flex;
+  align-items: center;
+  height: 100%;
+}
+#moviePageContainer #heroMovieContainer #alignmentContainer #heroDetailContainer {
   position: relative;
-  padding: 0px 2vw;
-  height: auto;
+  padding: 10px 2vw;
   z-index: 1;
 }
-#moviePageContainer #heroMovieContainer #heroDetailContainer .heroDetailItem {
-  margin-bottom: 10px;
+#moviePageContainer #heroMovieContainer #alignmentContainer #heroDetailContainer .heroDetailItem {
+  margin-bottom: 30px;
+}
+#moviePageContainer #heroMovieContainer #alignmentContainer #heroDetailContainer #heroDetailsButton {
+  font-size: large;
+}
+#moviePageContainer #heroMovieContainer #alignmentContainer #heroDetailContainer #heroDescription {
   line-height: 30px;
 }
-#moviePageContainer #heroMovieContainer #heroDetailContainer #heroTitle,
-#moviePageContainer #heroMovieContainer #heroDetailContainer #detailReleaseYear {
+#moviePageContainer #heroMovieContainer #alignmentContainer #heroDetailContainer #heroTitle {
   font-weight: 700;
-  font-size: xx-large;
-}
-#moviePageContainer #heroMovieContainer #heroDetailContainer #heroDetailButton {
-  cursor: pointer;
+  font-size: xxx-large;
 }
 #moviePageContainer #heroMovieContainer #gradientBox {
   display: flex;
@@ -95,15 +101,16 @@
 #detailContainer #detailHeader #backgroundImage {
   position: absolute;
   z-index: -1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
   opacity: 0.4;
   width: 100%;
   height: 100%;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: center;
 }
 #detailContainer #detailHeader #detailPoster {
   max-width: 300px;
@@ -254,6 +261,19 @@
 #navbarContainer #homeButton,
 #navbarContainer #searchBar {
   color: white;
+}
+
+@media (max-width: 480px) {
+  .movieItem {
+    width: 25vw !important;
+    height: 37.5vw !important;
+  }
+
+  #moviePosterContainer {
+    border: solid white;
+    width: 40vw;
+    height: 60vw;
+  }
 }
 
 /*# sourceMappingURL=global.css.map */
