--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,3 +1,5 @@
+$gradientBoxHeight: 80px;
+
 @mixin standardFormatting {
 	// display: flex;
 	position: relative;
@@ -24,7 +26,6 @@
 
 	#heroMovieContainer {
 		position: relative;
-		// border: solid red;
 		width: 100%;
 		height: 80vh;
 		// background-size: cover;
@@ -35,9 +36,9 @@
 		// overflow: hidden;
 		// overflow-x: hidden;
 		z-index: 1;
+		// border: solid red;
 
 		#heroBackgroundImage {
-			// border: solid blue;
 			position: absolute;
 			z-index: -1;
 			top: 0;
@@ -48,33 +49,49 @@
 			width: 100%;
 			height: 100%;
 			background-size: cover;
+			// background-size: auto;
 			background-repeat: no-repeat;
-			// background-image: linear-gradient(
-			// 	to bottom,
-			// 	rgba(255, 0, 0, 0),
-			// 	rgba(0, 0, 0, 1)
-			// );
+			background-position: center;
+			// border: solid blue;
 		}
-
-		#heroDetailContainer {
-			position: relative;
-			padding: 0px 2vw;
-			// width: 100%;
-			height: auto;
-			z-index: 1;
+		#alignmentContainer {
+			display: flex;
+			align-items: center;
+			// height: calc(100% - $gradientBoxHeight);
+			height: 100%;
 			// border: solid green;
 
-			.heroDetailItem {
-				margin-bottom: 10px;
-				line-height: 30px;
-			}
-			#heroTitle,
-			#detailReleaseYear {
-				font-weight: 700;
-				font-size: xx-large;
-			}
-			#heroDetailButton {
-				cursor: pointer;
+			#heroDetailContainer {
+				position: relative;
+				padding: 10px 2vw;
+				// display: flex;
+				// flex-direction: column;
+				// justify-content: center;
+				// align-items: center;
+				// margin: auto;
+				// padding: 10px 2vw;
+				// height: auto;
+				// height: calc(100% - $gradientBoxHeight);
+				z-index: 1;
+				// border: solid green;
+
+				.heroDetailItem {
+					margin-bottom: 30px;
+				}
+				#heroDetailsButton {
+					font-size: large;
+				}
+				#heroDescription {
+					line-height: 30px;
+				}
+				#heroTitle {
+					font-weight: 700;
+					font-size: xxx-large;
+				}
+				// NEED TO REVISIT THIS ICON, NOT SURE WHY THIS ISN'T WORKING
+				// #heroDetailButton {
+				// 	cursor: pointer;
+				// }
 			}
 		}
 
@@ -83,8 +100,8 @@
 			position: absolute;
 			align-self: bottom;
 			// background-color: white;
-			// border: solid white;
 			height: 80px;
+			// height: $gradientBoxHeight;
 			width: 100%;
 			bottom: 0px;
 			background-image: linear-gradient(
@@ -92,6 +109,7 @@
 				rgba(255, 255, 255, 0),
 				rgba(0, 0, 0, 1)
 			);
+			// border: solid white;
 		}
 	}
 
@@ -99,8 +117,6 @@
 		padding: 10px;
 
 		.movieContainer {
-			// background-color: black;
-			// color: white;
 			display: flex;
 			overflow-x: scroll;
 
@@ -146,16 +162,17 @@
 		#backgroundImage {
 			position: absolute;
 			z-index: -1;
-			top: 0;
-			bottom: 0;
-			left: 0;
-			right: 0;
+			top: 0%;
+			bottom: 0%;
+			left: 0%;
+			right: 0%;
 			// background: url(test.jpg) center center;
 			opacity: 0.4;
 			width: 100%;
 			height: 100%;
 			background-size: cover;
 			background-repeat: no-repeat;
+			background-position: center;
 		}
 
 		#detailPoster {
@@ -371,14 +388,19 @@
 	}
 }
 
-@media only screen and (max-width: 480px) {
-	// .movieIcon {
-	// 	width: 33vw;
-	// }
-	// #homeButton,
-	// #searchBar {
-	// 	color: blue;
-	// }
+@media (max-width: 480px) {
+	//Movie.js
+	.movieItem {
+		width: 25vw !important;
+		height: calc(1.5 * 25vw) !important;
+	}
+
+	//MovieProfile.js
+	#moviePosterContainer {
+		border: solid white;
+		width: 40vw;
+		height: calc(1.5 * 40vw);
+	}
 }
 
 @media screen and (min-width: 481px) and (max-width: 768px) {
