Search Function Added

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -419,7 +419,7 @@ $gradientBoxHeight: 80px;
 
 	//MovieProfile.js
 	#moviePosterContainer {
-		border: solid white;
+		// border: solid white;
 		width: 40vw;
 		height: calc(1.5 * 40vw);
 	}
