--- a/styles/global.css
+++ b/styles/global.css
@@ -99,7 +99,7 @@
   display: flex;
   z-index: 1;
   position: relative;
-  padding: 10px 5vw;
+  padding: 0px 2vw;
   flex-direction: column;
 }
 #detailContainer #detailHeader #secondaryContainer {
@@ -318,7 +318,7 @@
   margin: 0px auto;
   display: flex;
   flex-direction: column;
-  margin: auto;
+  margin: 0px auto 10px;
   color: white;
 }
 #footerContainer #credits {
