Minor Search Page CSS Correction

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -347,7 +347,7 @@ $gradientBoxHeight: 80px;
 
 	#searchResultsContainer {
 		display: flex;
-		width: 100vw;
+		width: 100%;
 		overflow-x: scroll;
 
 		#testSearchResults {
