--- a/styles/global.css
+++ b/styles/global.css
@@ -301,7 +301,7 @@
 }
 #searchResultsPageContainer #searchResultsContainer {
   display: flex;
-  width: 100vw;
+  width: 100%;
   overflow-x: scroll;
 }
 #searchResultsPageContainer #searchResultsContainer #testSearchResults {
