--- a/styles/global.css
+++ b/styles/global.css
@@ -268,6 +268,19 @@
   z-index: 0.95;
   cursor: pointer;
 }
+#navbarContainer #searchBar {
+  font-size: x-large;
+  font-weight: 700;
+  display: flex;
+}
+#navbarContainer #searchBar #searchLabel {
+  align-items: center;
+  justify-content: space-between;
+  display: flex;
+}
+#navbarContainer #searchBar #searchLabel #searchInput {
+  margin: 0px 0px 0px 10px;
+}
 #navbarContainer a {
   color: white;
   width: auto;
