Minor Navbar SCCS Adjustment

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -436,6 +436,16 @@ $gradientBoxHeight: 80px;
 	}
 }
 
+@media screen and (max-width: 480px) {
+	//Navbar.js
+	#navbarContainer {
+		#homeButton,
+		#searchLabel {
+			font-size: large;
+		}
+	}
+}
+
 @media screen and (min-width: 481px) and (max-width: 768px) {
 }
 
