--- a/styles/global.css
+++ b/styles/global.css
@@ -380,5 +380,11 @@
     margin: 5px;
   }
 }
+@media screen and (max-width: 480px) {
+  #navbarContainer #homeButton,
+#navbarContainer #searchLabel {
+    font-size: large;
+  }
+}
 
 /*# sourceMappingURL=global.css.map */
