Fixed Error Due to API Cast & Crew Filters No Longer Working

--- a/styles/global.css
+++ b/styles/global.css
@@ -69,7 +69,7 @@
   height: 80px;
   width: 100%;
   bottom: 0px;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), black);
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0));
 }
 #moviePageContainer #generalMovieContainer {
   padding: 10px;
@@ -146,7 +146,7 @@
   height: 80px;
   width: 100%;
   bottom: 0px;
-  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), black);
+  background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0), rgb(0, 0, 0));
   margin: 0px -5vw;
   z-index: -1;
 }
@@ -196,7 +196,7 @@
   justify-content: center;
 }
 #profileContainer #profileHeadshot #profileBlank {
-  height: 150px;
+  height: 165px;
   background-color: white;
 }
 #profileContainer #profileHeadshot .headshot {
@@ -209,6 +209,10 @@
   align-items: center;
   justify-content: center;
   text-align: center;
+}
+#profileContainer #profileName {
+  min-height: 43.2px;
+  align-items: flex-start;
 }
 
 #moviePosterContainer {
